--- a/Thesis-Sarker-MOF-2010.tex
+++ b/Thesis-Sarker-MOF-2010.tex
@@ -654,7 +654,7 @@ Q^G_{avg}= \frac{1}{N}\sum_{i=1}^{N} q^i_{k=k_{max}}
 \caption{Sum of translations of robots in our experiments.}
 \begin{tabular}{|p{1.5in}|m{1in}|m{0.9in}|}
 \hline Experiment Series & Average \protect\newline translation \protect\newline(SD) m & \textit{p-value} \protect\newline 1-tailed t-test (confidence)\\ 
-\hline \alert{8 robots, 2 tasks, centralized, n=5} & 2.631 (0.804) & 0.05 (90\%)\\ 
+\hline \alert{8 robots, 2 tasks, centralized, n=5} & 2.631 (0.804) & N/A\\ 
 \hline \alert{16 robots, 2 tasks, centralized, n=5} & 13.882 (3.099) & \alert{0.001 (99.8\%)}\\
 \hline \alert{16 robots, 4 tasks, local  with range=0.5m, n=3} & 4.907 (1.678) & N/A\\
 \hline \alert{16 robots, 4 tasks, local  with range=1m, n=3}  & 4.854  (1.592) & 0.0\\
@@ -711,7 +711,7 @@ Q^G_{avg}= \frac{1}{N}\sum_{i=1}^{N} q^i_{k=k_{max}}
 \begin{itemize}
     \item \small \alert{AFM solves the MRTA issue} for a relatively large group.\\
 %    $\rightarrow$ \small under both centralized and local communication strategies.
-    \item \small \alert{Task-performance varies under different strategies}\\
+    \item \small \alert{Task-performance varies under different communication strategies}\\
     $\rightarrow$ \small for a reasonably large group, local  communication achieves similar task-performance and task-specialization comparing with a centralized counterpart, but \textit{significantly} reduces motions.    
     \item \small AFM can model complex \alert{multi-tasking environment}\\
     \item \small \alert{Maximizing information flow} may not be  useful\\
@@ -726,7 +726,7 @@ Q^G_{avg}= \frac{1}{N}\sum_{i=1}^{N} q^i_{k=k_{max}}
 %    $\rightarrow$ \small as a property of self-regulation of individuals.
     \item \small \alert{Real-world implementation:} e.g. warehouse automation\\
     %$\rightarrow$ \small e.g. warehouse automation, manufacturing shop-floor or any other multi-tasking environment.
-     \item \small Study the \alert{role of formal structure} on informal self-organization.
+     %\item \small Study the \alert{role of formal structure} on informal self-organization.
     \end{itemize}
 \end{block}
 \end{frame}
@@ -743,7 +743,7 @@ $\rightarrow$ \small Bottom-up de-coupled construction of \textit{large} artific
 \end{itemize}
 %
 \hrule
-\scriptsize $^1$Garnier \textit{et al. Swarm Intelligence} 1:1, 2007.
+\scriptsize $^2$Garnier \textit{et al. Swarm Intelligence} 1:1, 2007.
 \end{frame}	
 %----------------
 \begin{frame}[t]{Specific Contributions}
