--- a/SarkerMOF-CityPt.tex
+++ b/SarkerMOF-CityPt.tex
@@ -282,7 +282,7 @@ $\rightarrow$  \scriptsize e.g. Ganfyd\footnote{\scriptsize  http://www.ganfyd.o
 %%%===========================================================
 \section{Data-mining and Info Dissemination over Social Networks}
 %%--------------------------------------------------
-\begin{frame}[t]{A framework for Exploiting Social Networks (SN)}	
+\begin{frame}[t]{A System for Exploiting Social Networks (SN)}	
 %\begin{columns}
 %\column{0.6\textwidth}  
 \begin{block}{Mining SN}
@@ -302,7 +302,7 @@ $\rightarrow$ \scriptsize Hot topic, expert search
   	
 \begin{block}{Disseminating public health information over SN}
 \begin{itemize}
-\item \small \alert{Automated delivery} based on RSS subscription
+\item \small \alert{Automated delivery} based on SN clusters/ subscription
 \item \small \alert{Relevant} information (recall self-organized search)
 \item \small \alert{Low overhead} of information based on user feedback
 \end{itemize}
