--- a/SarkerMOF-CityPt.tex
+++ b/SarkerMOF-CityPt.tex
@@ -30,7 +30,7 @@
   } 
 \subtitle
 {
-Through Self-organized Intelligent Frameworks Using Semantic Web, Web 2.0 and Social Networking Tools %
+Through Self-organized Approaches Using Semantic Web, Social Networking and  Web 2.0 Frameworks %Using Semantic Web, Web 2.0 and Social Networking Tools %
 }
 
 \author[MOFSarker]
@@ -65,12 +65,12 @@ Through Self-organized Intelligent Frameworks Using Semantic Web, Web 2.0 and So
 \section{Introduction}
 \begin{frame}[t]{Background: Web 2.0, Semantic web and Self-organization}
 \vspace*{-0.15cm}
-\begin{block}{Interconnections with self-organization }
+\begin{block}{Why self-organization is relevant?}
 \begin{itemize}
 \item \small Web 2.0 is based on \alert{bottom-up processes}\\ 
 $\rightarrow$ \scriptsize users generate contents through explicit and implicit social interactions.
 \item \small Complex patterns can be resulted from \alert{simple behavioural rules}\\ 
-$\rightarrow$ \scriptsize intelligence is not necessarily outcome of sophisticated agent cognition
+$\rightarrow$ \scriptsize complexity is not necessarily outcome of sophisticated agent cognition
 \end{itemize}
 \end{block}
 %%
@@ -105,7 +105,7 @@ $\rightarrow$ \scriptsize Depends on less communication/computation, almost no u
 \end{frame}
 %%=====================================================
 \section{A Semantic Search and Navigation System}
-\begin{frame}[t]{Self-organized semantic search through attractive field model}
+\begin{frame}[t]{Self-organized Semantic Search through Attractive Field Model}
 \vspace*{-0.25cm}
   \begin{columns}
 \column{0.5\textwidth}
@@ -222,7 +222,7 @@ $\rightarrow$ \scriptsize A form of \alert{positive feedback}
       \hline
       \alert{Data \protect\newline rendering} & XML, Dublin Core, SPARQL Protocol and RDF Query Language\\
       \hline
-      \alert{Page transformation} & XML Stylesheet\\
+      \alert{Page transformation} & XML Stylesheet XSLT\\
   		  \hline
   	 \alert{Web \protect\newline publishing} & HTML/XHTML, JavaScript Object Notation, Wiki Exchange Format\\
   	\hline
@@ -237,7 +237,7 @@ $\rightarrow$ \scriptsize A form of \alert{positive feedback}
 %%%===========================================================
 \section{Web 2.0 Features for NeLI}
 %%--------------------------------------------------
-\begin{frame}[t]{Web 2.0 in NeLI: Wiki, Blogs, RSS, Podcast}
+\begin{frame}[t]{Web 2.0 in NeLI: Wiki, Blogs, RSS, Podcast and more}
 \vspace*{-0.25cm}
 %\begin{block}{Key aspects}
 %\begin{itemize}
@@ -280,7 +280,7 @@ $\rightarrow$  \scriptsize e.g. Ganfyd\footnote{\scriptsize  http://www.ganfyd.o
 \end{columns}  	
 \end{frame}
 %%%===========================================================
-\section{Data-mining and Info Dissemination over Social Networks}
+\section{Data-mining over Social Networks}
 %%--------------------------------------------------
 \begin{frame}[t]{A System for Exploiting Social Networks (SN)}	
 %\begin{columns}
@@ -294,9 +294,9 @@ $\rightarrow$  \scriptsize  Probabilistic approach for name disambiguation, clas
 \item  \small Database \alert{storage,  indexing and access}\\
 $\rightarrow$  \scriptsize Domino, Python wrapper
 \item \small Social network \alert{modelling}\\ 
-$\rightarrow$  \scriptsize semantic modelling, clustering
+$\rightarrow$  \scriptsize semantic modelling, clustering using statistical and socio-biological models
 \item \small \alert{Search} services\\
-$\rightarrow$ \scriptsize Hot topic, expert search 
+$\rightarrow$ \scriptsize Hot topic, disease outbreak, expert search 
 \end{itemize}
 \end{block}
   	
@@ -311,8 +311,6 @@ $\rightarrow$ \scriptsize Hot topic, expert search
 \end{frame}
 
 %%%===========================================================
-\section{Infectious Disease Monitoring through  Social Networks}
-%%--------------------------------------------------
 \section{Infectious Disease Monitoring through  Social Networks}
 %%--------------------------------------------------
 \begin{frame}[t]{A Framework for Infectious Disease Monitoring through SN}
@@ -361,16 +359,12 @@ $\rightarrow$ \scriptsize scalable, minimum site maintenance overhead, fault-tol
 %%%===========================================================
 \section{Conclusion and Outlook}
 \begin{frame}[t]{Conclusion and Outlook}
-%  \begin{itemize}
-%    \item \normalsize \alert{Self-organized}\\
-%    $\rightarrow$ \small e.g. dynamic tasks, co-operative tasks, heterogeneous tasks.
-%    \item \normalsize \alert{Find optimum communication range}\\
-%    $\rightarrow$ \small as a property of self-regulation of individuals.
-%    \item \normalsize \alert{Real-world implementation}\\
-%    $\rightarrow$ \small e.g. warehouse automation, manufacturing shop-floor or any other multi-tasking environment.
-%     \item \normalsize \alert{Studying the role of formal structure on non-formal self-organization}\\
-%    $\rightarrow$ \small see in next few slides.
-%    \end{itemize}
+  \begin{itemize}
+    \item \small Web 2.0 is based on \alert{bottom-up processes}\\
+    \item \small \alert{Self-organized approaches} has potential to manage NeLI's large semantic web system\\
+    \item \small Both \alert{biological and statistical approaches} can be used to exploit the social networking tools for data mining and information dissemination\\
+    \item \small \alert{NeLI's infectious disease monitoring framework} can potentially be built by putting semantic web technology into existing frameworks.\\
+    \end{itemize}
 \end{frame}
 
 %%%%%%%%%%%%%%
