--- a/SarkerMOF-CityPt.tex
+++ b/SarkerMOF-CityPt.tex
@@ -104,7 +104,7 @@ $\rightarrow$ \scriptsize Depends on less communication/computation, almost no u
 \end{columns}
 \end{frame}
 %%=====================================================
-\section{A Semantic Search and Navigation System}
+\section{Semantic Search and Navigation}
 \begin{frame}[t]{Self-organized Semantic Search through Attractive Field Model}
 \vspace*{-0.25cm}
   \begin{columns}
@@ -235,7 +235,7 @@ $\rightarrow$ \scriptsize A form of \alert{positive feedback}
 \end{columns}  
 \end{frame}
 %%%===========================================================
-\section{Web 2.0 Features for NeLI}
+\section{Web 2.0 for NeLI}
 %%--------------------------------------------------
 \begin{frame}[t]{Web 2.0 in NeLI: Wiki, Blogs, RSS, Podcast and more}
 \vspace*{-0.25cm}
@@ -282,7 +282,7 @@ $\rightarrow$  \scriptsize e.g. Ganfyd\footnote{\scriptsize  http://www.ganfyd.o
 %%%===========================================================
 \section{Data-mining over Social Networks}
 %%--------------------------------------------------
-\begin{frame}[t]{A System for Exploiting Social Networks (SN)}	
+\begin{frame}[t]{A System for Exploiting Social Networking (SN) Tools}	
 %\begin{columns}
 %\column{0.6\textwidth}  
 \begin{block}{Mining SN}
@@ -300,7 +300,7 @@ $\rightarrow$ \scriptsize Hot topic, disease outbreak, expert search
 \end{itemize}
 \end{block}
   	
-\begin{block}{Disseminating public health information over SN}
+\begin{block}{Disseminating public health information over SN Tools}
 \begin{itemize}
 \item \small \alert{Automated delivery} based on SN clusters/ subscription
 \item \small \alert{Relevant} information (recall self-organized search)
@@ -311,9 +311,9 @@ $\rightarrow$ \scriptsize Hot topic, disease outbreak, expert search
 \end{frame}
 
 %%%===========================================================
-\section{Infectious Disease Monitoring through  Social Networks}
+\section{Infectious Disease Monitoring via Social Networks}
 %%--------------------------------------------------
-\begin{frame}[t]{A Framework for Infectious Disease Monitoring through SN}
+\begin{frame}[t]{A Framework for Infectious Disease Monitoring through SN Tools}
 \begin{columns}
 \column{0.6\textwidth} 
 \vspace*{-0.35cm} 	
@@ -357,7 +357,7 @@ $\rightarrow$ \scriptsize scalable, minimum site maintenance overhead, fault-tol
 \end{frame}
 
 %%%===========================================================
-\section{Conclusion and Outlook}
+\section{Conclusion}
 \begin{frame}[t]{Conclusion and Outlook}
   \begin{itemize}
     \item \small Web 2.0 is based on \alert{bottom-up processes}\\
